création des sections

--- a/Index.html
+++ b/Index.html
@@ -40,7 +40,47 @@
             <p class="InformationResult-result">Plus de 500 logements sont disponobles dans cette ville</p>
         </div>
     </header>
-
+    <section class="display_main_container">
+    <section class="background_part">
+        <p class="title_part">Hébegements à Marseille</p>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <a>Afficher plus</a>
+    </section>
+    <aside class="background_part" class="aside_style">
+         <p class="title_part">Les plus populaires</p>
+         <ul>
+             <li><div></div></li>
+             <li><div></div></li>
+             <li><div></div></li>
+         </ul>
+     </aside>
+    </section>
+    <section class="block_activity" class="main_container">
+        <p class="title_part">Activités à Marsielle</p>
+        <div>
+            <div></div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <div>
+            <div></div>
+            <div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="Footer-block">
             <ul>
