mise en place des vignettes

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
+<!--Element of haeder-->
     <header class="SiteHeader">
              <div class="SiteHeader-title-nav">
                <a class="SiteHeader-title" href="#"><img src="https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/logo/Reservia.svg" alt="icon du site"></a>
@@ -40,22 +41,21 @@
             <p class="InformationResult-result">Plus de 500 logements sont disponobles dans cette ville</p>
         </div>
     </header>
+    <!--body site -->
     <section class="display_main_container">
-    <section class="background_part">
+    <section class="section_vingette background_part">
         <p class="title_part">Hébegements à Marseille</p>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="box_vignette">
+            <div class="vignette"></div>
+            <div class="vignette"></div>
+            <div class="vignette"></div>
+            <div class="vignette"></div>
+            <div class="vignette"></div>
+            <div class="vignette"></div>
         </div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <a>Afficher plus</a>
+        <a href="#" id="link_box_vignette">Afficher plus</a>
     </section>
-    <aside class="background_part" class="aside_style">
+    <aside class="background_part  aside_style">
          <p class="title_part">Les plus populaires</p>
          <ul>
              <li><div></div></li>
@@ -81,6 +81,7 @@
             </div>
         </div>
     </section>
+    <!--end of the site-->
     <footer>
         <div class="Footer-block">
             <ul>
