finition des vignettes hébergements

--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
         <h1 class="SiteHeader-h1">Trouvez vote hébergment pour des vacnaces de rêve</h1>
         <p id="SiteHeader-slogan">En plein centre ville ou en pleine nature</p>
         <div class="SiteHeader-search-btn">
-           <div class="bar-search"><div class="btn-search"><i class="fas fa-map-marker-alt"></i></div> </div><input class="SiteHeader-search-input" type="text" value="Marseille,France"><button class="SiteHeader-btn">Rechercher</button> 
+           <div class="bar-search"><div class="btn-search"><i class="fas fa-map-marker-alt"></i></div> </div><input class="SiteHeader-search-input" type="text" placeholder="Marseille,France"><button class="SiteHeader-btn" type="submit">Rechercher</button> 
         </div>
         <div class="Filter">
             <div>
@@ -48,23 +48,26 @@
     <section class="section_vingette background_part">
         <p class="title_part">Hébegements à Marseille</p>
         <div class="box_vignette">
+            <a href="#" class="link_vignette">
             <div class="vignette_hebergement vignette" id="img_vignette_img1" >
                 <div class="text_vignette_hebergement">
-                    <h4 class="vignette_title">Hôtel de la mer</h4>
-                    <p class="vignette_title">Nuit à partir de <strong>46€</strong> </p>
+                    <h4 class="vignette_title">Auberge la Cannebière</h4>
+                    <p class="vignette_text">Nuit à partir de <strong>25€</strong> </p>
                     <ul class="list_etoile_hebergement">
                         <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                         <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                         <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
-                        <li class="etoile_vignette_grey"><i class="fas fa-star "></i></li>
+                        <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                         <li class="etoile_vignette_grey"><i class="fas fa-star "></i></li>
                     </ul> 
                 </div>
-            </div>
+             </div>
+            </a>
+            <a href="#" class="link_vignette">
             <div class="vignette_hebergement vignette" id="img_vignette_img2" >
                 <div class="text_vignette_hebergement">
                     <h4 class="vignette_title">Hôtel du port</h4>
-                    <p class="vignette_title">Nuit à partir de <strong>52€</strong></p>
+                    <p class="vignette_text">Nuit à partir de <strong>52€</strong></p>
                         <ul class="list_etoile_hebergement">
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
@@ -74,10 +77,57 @@
                         </ul> 
                 </div>
             </div>
-            <div class="vignette_hebergement vignette" id="img_vignette_img2" >
+        </a>
+            <a href="#" class="link_vignette">
+            <div class="vignette_hebergement vignette" id="img_vignette_img3" >
                 <div class="text_vignette_hebergement">
-                    <h4 class="vignette_title">Hôtel du port</h4>
-                    <p class="vignette_title">Nuit à partir de <strong>52€</strong></p>
+                    <h4 class="vignette_title">Hôtel les mouettes</h4>
+                    <p class="vignette_text">Nuit à partir de <strong>76€</strong></p>
+                        <ul class="list_etoile_hebergement">
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_grey"><i class="fas fa-star "></i></li>
+                        </ul> 
+                </div>
+            </div>
+        </a>
+            <a href="#" class="link_vignette">
+            <div class="vignette_hebergement vignette" id="img_vignette_img4" >
+                <div class="text_vignette_hebergement">
+                    <h4 class="vignette_title">Hôtel de la mer</h4>
+                    <p class="vignette_text">Nuit à partir de <strong>46€</strong></p>
+                        <ul class="list_etoile_hebergement">
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_grey"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_grey"><i class="fas fa-star "></i></li>
+                        </ul> 
+                </div>
+            </div>
+        </a>
+            <a href="#" class="link_vignette">
+            <div class="vignette_hebergement vignette" id="img_vignette_img5" >
+                <div class="text_vignette_hebergement">
+                    <h4 class="vignette_title">Auberge le Panier</h4>
+                    <p class="vignette_text">Nuit à partir de <strong>23€</strong></p>
+                        <ul class="list_etoile_hebergement">
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
+                            <li class="etoile_vignette_grey"><i class="fas fa-star "></i></li>
+                        </ul> 
+                </div>
+            </div>
+        </a>
+            <a href="#" class="link_vignette">
+            <div class="vignette_hebergement vignette" id="img_vignette_img6" >
+                <div class="text_vignette_hebergement">
+                    <h4 class="vignette_title">Hôtel chez Amina</h4>
+                    <p class="vignette_text">Nuit à partir de <strong>96€</strong></p>
                         <ul class="list_etoile_hebergement">
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
@@ -87,20 +137,18 @@
                         </ul> 
                 </div>
             </div>
-            <div class="vignette"></div>
-            <div class="vignette"></div>
-            <div class="vignette"></div>
         </div>
+    </a>
         <a href="#" id="link_box_vignette">Afficher plus</a>
     </section>
     <!--insertion des vignettes dans l'Aside-->
     <aside class="background_part  aside_style">
          <div class="title_aside" ><p class="title_part">Les plus populaires</p> <i class="fas fa-chart-line"></i></div>
          <ul>
-             <li class="vignette_aside_populaire"><div class="vignette_populaire vignette" id="img_vignette_img8" >
+             <li class="vignette_aside_populaire"><div class="vignette_populaire vignette" id="img_vignette_img7" >
                 <div class="text_vignette_populaire">
                     <h4 class="vignette_title">Au coeur de l'eau Chambre d'hôtes</h4>
-                    <p class="vignette_text">Nuit à partir de 71<strong>€</strong></p>
+                    <p class="vignette_text_populaire">Nuit à partir de 71<strong>€</strong></p>
                         <ul class="list_etoile_populaire">
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
@@ -114,7 +162,7 @@
              <li class="vignette_aside_populaire"><div class="vignette_populaire vignette" id="img_vignette_img8" >
                 <div class="text_vignette_populaire">
                     <h4 class="vignette_title">Au coeur de l'eau Chambre d'hôtes</h4>
-                    <p class="vignette_text">Nuit à partir de 71<strong>€</strong></p>
+                    <p class="vignette_text_populaire">Nuit à partir de 71<strong>€</strong></p>
                         <ul class="list_etoile_populaire">
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
@@ -125,10 +173,10 @@
                     </div>
                 </div>
             </li>
-             <li class="vignette_aside_populaire"><div class="vignette_populaire vignette" id="img_vignette_img7" >
+             <li class="vignette_aside_populaire"><div class="vignette_populaire vignette" id="img_vignette_img9" >
                 <div class="text_vignette_populaire">
                     <h4 class="vignette_title">Hôtel le solei du matin</h4>
-                    <p class="vignette_text">Nuit à partir de  128<strong>€</strong></p>
+                    <p class="vignette_text_populaire">Nuit à partir de  128<strong>€</strong></p>
                         <ul class="list_etoile_populaire">
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
                             <li class="etoile_vignette_bleu"><i class="fas fa-star "></i></li>
