mise en place section activity

--- a/Index.html
+++ b/Index.html
@@ -190,20 +190,45 @@
          </ul>
      </aside>
     </section>
-    <section class="block_activity" class="main_container">
-        <p class="title_part">Activités à Marsielle </p> 
-        <div>
-            <div></div>
+    <p class="title_part">Activités à Marsielle </p> 
+    <section class="main_container_activity">
+        
+        <div class="block_activity">
+            <div class="vignette_activity_big vignette" id="img_vignette_img12" >
+                <div class="text_vignette_activity">
+                    <h4 class="vignette_title_activity"> Vieux Port </h4>
+                </div>
+            </div>
             <div>
-                <div></div>
-                <div></div>
+                <div class="vignette_activity_medium vignette" id="img_vignette_img11" >
+                    <div class="text_vignette_activity">
+                        <h4 class="vignette_title_activity">Fort de Pomègues </h4>
+                    </div>
+                </div>
+                <div class="vignette_activity_small vignette" id="img_vignette_img10" >
+                    <div class="text_vignette_activity">
+                        <h4 class="vignette_title_activity">Notre-Dame-de-la-Garde </h4>
+                    </div>
+                </div>
             </div>
         </div>
-        <div>
-            <div></div>
+        <div class="block_activity">
+            <div class="vignette_activity_big vignette" id="img_vignette_img12" >
+                <div class="text_vignette_activity">
+                    <h4 class="vignette_title_activity"> Vieux Port </h4>
+                </div>
+            </div>
             <div>
-                <div></div>
-                <div></div>
+                <div class="vignette_activity_medium vignette" id="img_vignette_img11" >
+                    <div class="text_vignette_activity">
+                        <h4 class="vignette_title_activity">Fort de Pomègues </h4>
+                    </div>
+                </div>
+                <div class="vignette_activity_small vignette" id="img_vignette_img10" >
+                    <div class="text_vignette_activity">
+                        <h4 class="vignette_title_activity">Notre-Dame-de-la-Garde </h4>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
