--- a/Index.html
+++ b/Index.html
@@ -227,12 +227,12 @@
                 </div>
             </div>
             <div class="block_activity_double">
-                <div class="vignette_activity_medium vignette vignette_activity" id="img_vignette_img14" >
+                <div class="vignette_activity_right vignette vignette_activity" id="img_vignette_img14" >
                     <div class="text_vignette_activity">
                         <h4 class="vignette_title_activity">Notre-Dame-de-la-Garde </h4>
                     </div>
                 </div>
-                <div class="vignette_activity_small vignette vignette_activity" id="img_vignette_img15" >
+                <div class="vignette_activity_right vignette vignette_activity" id="img_vignette_img15" >
                     <div class="text_vignette_activity">
                         <h4 class="vignette_title_activity">Parc Longchamp </h4>
                     </div>
