--- a/Index.html
+++ b/Index.html
@@ -139,8 +139,9 @@
                 </div>
             </div> 
         </a>
-    <a href="#" id="link_box_vignette">Afficher plus</a>
+    
 </div>
+<a href="#" id="link_box_vignette">Afficher plus</a>
     </section>
     <!--insertion des vignettes dans l'Aside-->
     <aside class="background_part  aside_style">
@@ -227,12 +228,12 @@
                 </div>
             </div>
             <div class="block_activity_double">
-                <div class="vignette_activity_medium vignette vignette_activity" id="img_vignette_img14" >
+                <div class="vignette_activity_right vignette vignette_activity" id="img_vignette_img14" >
                     <div class="text_vignette_activity">
                         <h4 class="vignette_title_activity">Notre-Dame-de-la-Garde </h4>
                     </div>
                 </div>
-                <div class="vignette_activity_small vignette vignette_activity" id="img_vignette_img15" >
+                <div class="vignette_activity_right vignette vignette_activity" id="img_vignette_img15" >
                     <div class="text_vignette_activity">
                         <h4 class="vignette_title_activity">Parc Longchamp </h4>
                     </div>
