--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Réservia</title>
+    <title> Réservia</title>
     <link rel="stylesheet" href="Style.css" type="text/css"> 
     <link rel="stylesheet" media="screen and (max-width: 1920px)" href="Style_grand_écran.css">
+    <link rel="stylesheet" media="screen and (max-width: 1080px)" href="Style_écran_14.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
