--- a/Index.html
+++ b/Index.html
@@ -150,7 +150,7 @@
          <div class="title_aside" ><p class="title_part">Les plus populaires</p> <i class="fas fa-chart-line"></i></div>
          <ul>
              <li class="vignette_aside_populaire">
-                <a href="#" class="link_vignette"></a>
+                <a href="#" class="link_vignette">
                  <div class="vignette_populaire vignette" id="img_vignette_img7" >
                 <div class="text_vignette_populaire">
                     <h4 class="vignette_title">Au coeur de l'eau Chambre d'hôtes</h4>
