--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Réservia</title>
     <link rel="stylesheet" href="Style.css" type="text/css">
-    <link rel="stylesheet" media="screen and (min-width: 1470px)" href="Style_grand_écran.css">
+    <link rel="stylesheet" media="screen and (min-width: 1480px)" href="Style_grand_écran.css">
     <link rel="stylesheet" media="screen and (max-width: 1470px)" href="Style_écran_14.css">
     <link rel="stylesheet" media="screen and (max-width : 380px)" href="Style_smartphone.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
@@ -25,8 +25,8 @@
                     alt="icon du site"></a>
             <div class="SiteHeader-nav">
                 <ul>
-                    <li class="SiteHeader-nav"><a href="#">Hébergements</a> </li>
-                    <li class="SiteHeader-nav"><a href="#">Activités</a> </li>
+                    <li class="SiteHeader-nav"><a href="#hébergement">Hébergements</a> </li>
+                    <li class="SiteHeader-nav"><a href="#activity">Activités</a> </li>
                     <li class="SiteHeader-nav"><a id="link_register" href="#">S'inscrire</a> </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
     <section class="display_main_container">
         <!--vignette hebergments-->
         <section class="section_vingette background_part">
-            <h2 class="title_part">Hébegements à Marseille</h2>
+            <h2 class="title_part" id="hébergement">Hébegements à Marseille</h2>
             <div class="box_vignette">
                 <a href="#" class="link_vignette">
                     <div class="vignette_hebergement vignette" id="img_vignette_img1">
@@ -227,7 +227,7 @@
         </aside>
     </section>
     <!--Section Activités-->
-    <h2 class="title_part">Activités à Marsielle </h2>
+    <h2 class="title_part" id="activity">Activités à Marsielle </h2>
     <section class="main_container_activity">
         <div class="block_activity">
             <a href="#" class="link_vignette">
