--- a/smartphone-first/smartphone-first.html
+++ b/smartphone-first/smartphone-first.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" view-width="100%">
     <title>Réservia</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" media="sreen and (max-width : 1200px)" type="text/css" href="Style-descktop.css">
+    <link rel="stylesheet" media="sreen and (min-width : 1200px)" type="text/css" href="Style-descktop.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
