responsive title et nav ok

--- a/smartphone-first/smartphone-first.html
+++ b/smartphone-first/smartphone-first.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" view-width="100%">
     <title>Réservia</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" media="sreen and (min-width : 1200px)" type="text/css" href="Style-descktop.css">
+    <link rel="stylesheet" type="text/css" media="screen and (min-width : 1000px)" href="Style-descktop.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -16,12 +16,11 @@
         <a class="SiteHeader-title" href="#"><img
             src="https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/logo/Reservia.svg"
             alt="icon du site"></a>
-            <p><a id="link_register" href="#">S'inscrire</a></p>
-        </div>
-        <div class="sous-en-tête">
+            <div><a id="link_register" href="#">S'inscrire</a></div>
             <div class="menu"><a href="#hébergement">Hébergements</a></div>
             <div class="menu"><a href="#activity">Activités</a></div>
         </div>
+    
         <div>
             <h1 class="SiteHeader-h1">Trouvez votre hébergement pour des vacances de rêve</h1>
             <p id="SiteHeader-slogan">En plein centre ville ou en pleine nature</p>
