responsive bouton recherche

--- a/smartphone-first/smartphone-first.html
+++ b/smartphone-first/smartphone-first.html
@@ -27,8 +27,9 @@
             <div class="SiteHeader-search-btn">
                 <div class="bar-search">
                     <div class="btn-search"><i class="fas fa-map-marker-alt"></i></div>
-                </div><input class="SiteHeader-search-input" type="text" placeholder="Marseille,France"><button
-                    class="SiteHeader-btn" type="submit">Rechercher</button>
+                </div>
+                <input class="SiteHeader-search-input" type="text" placeholder="Marseille,France"><button
+                    class="SiteHeader-btn" type="submit"> <div id="text_btn_search"> Rechercher</div> <div id="ico_btn_search"> <i class="fas fa-search"></i></div> </button>
             </div>
             <div class="Filter">
                 <div>
