--- a/smartphone-first/smartphone-first.html
+++ b/smartphone-first/smartphone-first.html
@@ -62,7 +62,48 @@
 
         </div>
     </header>
+<!--MAIN SECTION-->
+<aside class="aside">
+    <div class="title_aside"> <h2>Les plus populaires</h2> <i class="fas fa-chart-line"></i></div>
+    <div>
+        <div class="cards_populaires">
+            <div class="img_populaires" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)"></div>
+            <div class="text_populaires">
+                text
+            </div>
+        </div>
+        <div class="cards_populaires">
+            <img class="img_populaires" src="https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+            <div class="text_populaires">
+                text
+            </div>
+        </div>
+        <div class="cards_populaires">
+            <img class="img_populaires" src="https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+            <div class="text_populaires">
+                text
+            </div>
+        </div>
+    </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</aside>
+    <!--FOOTER-->
     <footer class="footer">
         <div class="Footer-block">
             <ul>
