--- a/smartphone-first/smartphone-first.html
+++ b/smartphone-first/smartphone-first.html
@@ -68,22 +68,24 @@
     <div>
         <div class="cards_populaires">
             <div class="img_populaires" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)"></div>
+             <div class="text_populaires">
+                 <h3>Hôtel le soleil du matin</h3>
+                  <p>Nuit à partir de 128 <b>€</b></p> 
+                  <p><i class="fas fa-star "></i><i class="fas fa-star "></i><i class="fas fa-star "></i><i class="fas fa-star "></i><i class="fas fa-star "></i></p>
+             </div>
+         </div>
+        <div class="cards_populaires">
+           <div class="img_populaires" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg)"></div>
             <div class="text_populaires">
                 text
             </div>
         </div>
         <div class="cards_populaires">
-            <img class="img_populaires" src="https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-            <div class="text_populaires">
-                text
-            </div>
-        </div>
-        <div class="cards_populaires">
-            <img class="img_populaires" src="https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
-            <div class="text_populaires">
-                text
-            </div>
-        </div>
+            <div class="img_populaires" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)"></div>
+             <div class="text_populaires">
+                 text
+             </div>
+         </div>
     </div>
 
 
