--- a/smartphone-first/smartphone-first.html
+++ b/smartphone-first/smartphone-first.html
@@ -63,6 +63,7 @@
         </div>
     </header>
 <!--MAIN SECTION-->
+<div class="main_section">
 <aside class="aside">
     <div class="title_aside"> <h2>Les plus populaires</h2> <i class="fas fa-chart-line"></i></div>
     <div>
@@ -71,40 +72,98 @@
              <div class="text_populaires">
                  <h3>Hôtel le soleil du matin</h3>
                   <p>Nuit à partir de 128 <b>€</b></p> 
-                  <p><i class="fas fa-star "></i><i class="fas fa-star "></i><i class="fas fa-star "></i><i class="fas fa-star "></i><i class="fas fa-star "></i></p>
+                  <p class="star_populaires"><i class="fas fa-star bleu "></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i></p>
              </div>
          </div>
         <div class="cards_populaires">
            <div class="img_populaires" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg)"></div>
-            <div class="text_populaires">
-                text
-            </div>
+           <div class="text_populaires">
+            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+             <p>Nuit à partir de 71 <b>€</b></p> 
+             <pclass="star_populaires"><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+        </div>
         </div>
         <div class="cards_populaires">
-            <div class="img_populaires" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg)"></div>
-             <div class="text_populaires">
-                 text
-             </div>
+            <div class="img_populaires" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg)"></div>
+            <div class="text_populaires">
+                <h3>Hôtel Tout bleu et Blanc</h3>
+                 <p>Nuit à partir de 68 <b>€</b></p> 
+                 <pclass="star_populaires"><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+                </div>
          </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </aside>
+    <!--Section Hebergement-->
+    <section class="section">
+        <h2>Hébergements à Marseille</h2>
+        <div class="cards_hebergements">
+            <div class="img_hebergements" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg)"></div>
+            <div class="text_hebergements">
+                <h3>Auberge la Cannebière</h3>
+                 <p>Nuit à partir de <b>25</b> <b>€</b></p> 
+                 <p><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+                </div>
+         </div>
+         <div class="cards_hebergements">
+            <div class="img_hebergements" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg)"></div>
+            <div class="text_hebergements">
+                <h3>Auberge la Cannebière</h3>
+                 <p>Nuit à partir de <b>25</b> <b>€</b></p> 
+                 <p><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+                </div>
+         </div>
+         <div class="cards_hebergements">
+            <div class="img_hebergements" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg)"></div>
+            <div class="text_hebergements">
+                <h3>Auberge la Cannebière</h3>
+                 <p>Nuit à partir de <b>25</b> <b>€</b></p> 
+                 <p><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+                </div>
+         </div>
+         <div class="cards_hebergements">
+            <div class="img_hebergements" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg)"></div>
+            <div class="text_hebergements">
+                <h3>Auberge la Cannebière</h3>
+                 <p>Nuit à partir de <b>25</b> <b>€</b></p> 
+                 <p><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+                </div>
+         </div>
+         <div class="cards_hebergements">
+            <div class="img_hebergements" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg)"></div>
+            <div class="text_hebergements">
+                <h3>Auberge la Cannebière</h3>
+                 <p>Nuit à partir de <b>25</b> <b>€</b></p> 
+                 <p><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+                </div>
+         </div>
+         <div class="cards_hebergements">
+            <div class="img_hebergements" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg)"></div>
+            <div class="text_hebergements">
+                <h3>Auberge la Cannebière</h3>
+                 <p>Nuit à partir de <b>25</b> <b>€</b></p> 
+                 <p><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
+                </div>
+         </div>
+    </section>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!--FOOTER-->
     <footer class="footer">
         <div class="Footer-block">
