--- a/smartphone-first/smartphone-first.html
+++ b/smartphone-first/smartphone-first.html
@@ -96,6 +96,7 @@
     <!--Section Hebergement-->
     <section class="section">
         <h2>Hébergements à Marseille</h2>
+        <div class="box_cards">
         <div class="cards_hebergements">
             <div class="img_hebergements" style="background-image: url(https://raw.githubusercontent.com/AlexPYgit/AlexisPayet_2_20122020/master/images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg)"></div>
             <div class="text_hebergements">
@@ -144,6 +145,8 @@
                  <p><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star bleu"></i><i class="fas fa-star grey"></i></p>
                 </div>
          </div>
+        </div>
+        <p>Afficher plus</p>
     </section>
 </div>
 
